--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,130 +7,139 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-  <!-- DNI -->
+  <!-- REGISTRO DE NUEVO DNI -->
 
   <TextView
       android:id="@+id/TextView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="DNI:"
+      android:text="REGISTRO DE NUEVO DNI"
+      android:textStyle="bold"
+      android:textColor="@color/purple_500"
       style="@style/Theme.Pacho"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="20dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
 
-  <EditText
-      android:id="@+id/EditText1"
-      android:layout_width="120dp"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="10dp"
-      android:layout_marginLeft="30dp"
-      style="@style/Theme.Pacho"
-      app:layout_constraintLeft_toLeftOf="@+id/TextView1"
-      app:layout_constraintTop_toTopOf="parent"/>
-
-  <!-- EDAD -->
+  <!-- FECHA -->
 
   <TextView
       android:id="@+id/TextView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="EDAD:"
+      android:text="FECHA:"
+      android:textStyle="bold"
       style="@style/Theme.Pacho"
       android:layout_marginTop="20dp"
-      android:layout_marginLeft="10dp"
-      app:layout_constraintLeft_toRightOf="@+id/EditText1"
+      android:layout_marginLeft="15dp"
+      app:layout_constraintLeft_toRightOf="@+id/TextView1"
       app:layout_constraintTop_toTopOf="parent" />
-
-  <EditText
-      android:id="@+id/EditText2"
-      android:layout_width="100dp"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="10dp"
-      android:layout_marginLeft="50dp"
-      style="@style/Theme.Pacho"
-      app:layout_constraintLeft_toLeftOf="@+id/TextView2"
-      app:layout_constraintTop_toTopOf="parent"/>
-
-  <!-- APELLIDO PATERNO -->
 
   <TextView
       android:id="@+id/TextView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="APELLIDO PATERNO:"
+      android:text="01/05/2020"
+      android:textStyle="bold"
       style="@style/Theme.Pacho"
-      android:layout_marginTop="35dp"
+      android:layout_marginTop="20dp"
       android:layout_marginLeft="10dp"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/TextView1" />
+      app:layout_constraintLeft_toRightOf="@+id/TextView2"
+      app:layout_constraintTop_toTopOf="parent" />
 
-  <EditText
-      android:id="@+id/EditText3"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="10dp"
-      android:layout_marginLeft="150dp"
-      style="@style/Theme.Pacho"
-      app:layout_constraintLeft_toRightOf="@+id/TextView3"
-      app:layout_constraintTop_toBottomOf="@+id/EditText1"/>
-
-  <!-- APELLIDO MATERNO -->
+  <!-- APELLIDO PATERNO -->
 
   <TextView
       android:id="@+id/TextView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="APELLIDO MATERNO:"
+      android:text="APELLIDO PATERNO:"
       style="@style/Theme.Pacho"
       android:layout_marginTop="35dp"
-      android:layout_marginLeft="10dp"
+      android:layout_marginLeft="15dp"
       app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/TextView3" />
+      app:layout_constraintTop_toBottomOf="@+id/TextView1" />
 
   <EditText
-      android:id="@+id/EditText4"
+      android:id="@+id/EditText1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="15dp"
-      android:layout_marginLeft="150dp"
+      android:layout_marginTop="23dp"
+      android:layout_marginLeft="160dp"
       style="@style/Theme.Pacho"
       app:layout_constraintLeft_toRightOf="@+id/TextView4"
-      app:layout_constraintTop_toBottomOf="@+id/EditText3"/>
+      app:layout_constraintTop_toBottomOf="@+id/TextView1"/>
 
-
-  <!-- NOMBRES -->
+  <!-- APELLIDO MATERNO -->
 
   <TextView
       android:id="@+id/TextView5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="NOMBRES:"
+      android:text="APELLIDO MATERNO:"
       style="@style/Theme.Pacho"
       android:layout_marginTop="35dp"
-      android:layout_marginLeft="10dp"
+      android:layout_marginLeft="15dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/TextView4" />
 
   <EditText
-      android:id="@+id/EditText5"
+      android:id="@+id/EditText2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="15dp"
-      android:layout_marginLeft="150dp"
+      android:layout_marginTop="16dp"
+      android:layout_marginLeft="160dp"
       style="@style/Theme.Pacho"
       app:layout_constraintLeft_toRightOf="@+id/TextView5"
-      app:layout_constraintTop_toBottomOf="@+id/EditText4"/>
+      app:layout_constraintTop_toBottomOf="@+id/EditText1"/>
 
 
+  <!-- NOMBRES -->
+
+  <TextView
+      android:id="@+id/TextView6"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="NOMBRES:"
+      style="@style/Theme.Pacho"
+      android:layout_marginTop="35dp"
+      android:layout_marginLeft="15dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/TextView5" />
+
+  <EditText
+      android:id="@+id/EditText3"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="13dp"
+      android:layout_marginLeft="160dp"
+      style="@style/Theme.Pacho"
+      app:layout_constraintLeft_toRightOf="@+id/TextView6"
+      app:layout_constraintTop_toBottomOf="@+id/EditText2"/>
+
+
+  <!-- SEXO -->
+
+  <TextView
+      android:id="@+id/TextView7"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="SEXO:"
+      style="@style/Theme.Pacho"
+      android:layout_marginTop="35dp"
+      android:layout_marginLeft="15dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/TextView6" />
 
   <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
 	      android:layout_width="match_parent"
 	      android:layout_height="wrap_content"
-	      android:id="@+id/sexo"
-	      android:layout_marginTop="50dp"
-	      app:layout_constraintTop_toTopOf="parent"
+	      android:id="@+id/RadioGroup1"
+	      android:layout_marginTop="28dp"
+	      android:layout_marginLeft="160dp"
+	      app:layout_constraintLeft_toRightOf="@+id/TextView7"
+	      app:layout_constraintTop_toBottomOf="@+id/TextView6"
 	      android:orientation="horizontal">
     <RadioButton android:id="@+id/masculino"
 		 android:layout_width="wrap_content"
@@ -142,15 +151,125 @@
 		 android:text="Femenino"/>
   </RadioGroup>
 
+
+  <!-- DEPARTAMENTO -->
+  
+  <TextView
+      android:id="@+id/TextView8"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="DEPARTAMENTO:"
+      style="@style/Theme.Pacho"
+      android:layout_marginTop="35dp"
+      android:layout_marginLeft="15dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/TextView7" />
+
   <Spinner
-      android:id="@+id/ciudad"
+      android:id="@+id/Spinner1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="150dp"
+      android:layout_marginTop="27dp"
+      android:layout_marginLeft="160dp"
+      app:layout_constraintLeft_toLeftOf="@+id/TextView8"
+      app:layout_constraintTop_toBottomOf="@+id/RadioGroup1"
+      android:text="Departamento"/>
+
+
+  <!-- PROVINCIA -->
+  
+  <TextView
+      android:id="@+id/TextView9"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="PROVINCIA:"
+      style="@style/Theme.Pacho"
+      android:layout_marginTop="35dp"
+      android:layout_marginLeft="15dp"
       app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      android:text="Ciudad"/>
+      app:layout_constraintTop_toBottomOf="@+id/TextView8" />
+
+  <Spinner
+      android:id="@+id/Spinner2"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="30dp"
+      android:layout_marginLeft="160dp"
+      app:layout_constraintLeft_toLeftOf="@+id/TextView9"
+      app:layout_constraintTop_toBottomOf="@+id/Spinner1"
+      android:text="Provincia"/>
+
+  <!-- DISTRITO -->
+  
+  <TextView
+      android:id="@+id/TextView10"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="DISTRITO:"
+      style="@style/Theme.Pacho"
+      android:layout_marginTop="35dp"
+      android:layout_marginLeft="15dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/TextView9" />
+
+  <Spinner
+      android:id="@+id/Spinner3"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="30dp"
+      android:layout_marginLeft="160dp"
+      app:layout_constraintLeft_toLeftOf="@+id/TextView10"
+      app:layout_constraintTop_toBottomOf="@+id/Spinner2"
+      android:text="Distrito"/>
+
+  
+  <!-- ESTADO CIVIL -->
+  
+  <TextView
+      android:id="@+id/TextView11"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="ESTADO CIVIL:"
+      style="@style/Theme.Pacho"
+      android:layout_marginTop="35dp"
+      android:layout_marginLeft="15dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/TextView10" />
+
+  <Spinner
+      android:id="@+id/Spinner4"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="30dp"
+      android:layout_marginLeft="160dp"
+      app:layout_constraintLeft_toLeftOf="@+id/TextView11"
+      app:layout_constraintTop_toBottomOf="@+id/Spinner3"
+      android:text="Estado Civil"/>
+
+  <!-- GRADO DE INSTRUCCION -->
+  
+  <TextView
+      android:id="@+id/TextView12"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="GRADO INSTRUCCIÓN:"
+      style="@style/Theme.Pacho"
+      android:layout_marginTop="35dp"
+      android:layout_marginLeft="15dp"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/TextView11" />
+
+  <Spinner
+      android:id="@+id/Spinner5"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="30dp"
+      android:layout_marginLeft="160dp"
+      app:layout_constraintLeft_toLeftOf="@+id/TextView10"
+      app:layout_constraintTop_toBottomOf="@+id/Spinner4"
+      android:text="Grado Instruccion"/>
+
+
 
   <Button
       android:id="@+id/b_aceptar"
